<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/info_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/background">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="24dp"
                    android:src="@drawable/gojo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="0dp"
                    android:layout_toEndOf="@+id/profile_pic"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ashis_paul"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/github_username"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/profile_pic"
                    android:background="@color/divider_grey" />

                <LinearLayout
                    android:id="@+id/model_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider_1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/model_info_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model_overview"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="400dp"
                        android:layout_height="300dp"
                        android:src="@drawable/model_detail"
                        android:id="@+id/model_info"
                        android:visibility="gone"
                        android:contentDescription="@string/model_overview" />

                </LinearLayout>

                <View
                    android:id="@+id/divider_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/model_info_container"
                    android:background="@color/divider_grey" />


                <TextView
                    android:id="@+id/info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider_2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/contact_information"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/icon_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/info_title"
                    android:padding="24dp">

                    <ImageView
                        android:id="@+id/insta_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/insta_logo"
                        android:tag="https://instagram.com/ashis0013"
                        app:layout_constraintEnd_toStartOf="@+id/gmail_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/gmail_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/gmail_logo"
                        app:layout_constraintEnd_toStartOf="@id/fb_icon"
                        app:layout_constraintStart_toEndOf="@id/insta_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/fb_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/fb_logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gmail_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:id="@+id/divider_3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/icon_container"
                    android:background="@color/divider_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider_3"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</layout>